; ModuleID = '/home/carl/AnghaBench/rufus/src/ext2fs/extr_bmap.c_ext2fs_file_block_offset_too_big.c'
source_filename = "/home/carl/AnghaBench/rufus/src/ext2fs/extr_bmap.c_ext2fs_file_block_offset_too_big.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }
%struct.ext2_inode = type { i32 }

@EXT4_EXTENTS_FL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ext2fs_file_block_offset_too_big(%struct.TYPE_3__* %0, %struct.ext2_inode* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca %struct.ext2_inode*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %5, align 8
  store %struct.ext2_inode* %1, %struct.ext2_inode** %6, align 8
  store i64 %2, i64* %7, align 8
  %10 = load i64, i64* %7, align 8
  %11 = icmp uge i64 %10, 4294967295
  br i1 %11, label %12, label %13

12:                                               ; preds = %3
  store i32 1, i32* %4, align 4
  br label %46

13:                                               ; preds = %3
  %14 = load %struct.ext2_inode*, %struct.ext2_inode** %6, align 8
  %15 = getelementptr inbounds %struct.ext2_inode, %struct.ext2_inode* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* @EXT4_EXTENTS_FL, align 4
  %18 = and i32 %16, %17
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %13
  store i32 0, i32* %4, align 4
  br label %46

21:                                               ; preds = %13
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = ashr i32 %24, 2
  %26 = sext i32 %25 to i64
  store i64 %26, i64* %8, align 8
  %27 = load i64, i64* %8, align 8
  store i64 %27, i64* %9, align 8
  %28 = load i64, i64* %8, align 8
  %29 = load i64, i64* %8, align 8
  %30 = mul i64 %28, %29
  %31 = load i64, i64* %9, align 8
  %32 = add i64 %31, %30
  store i64 %32, i64* %9, align 8
  %33 = load i64, i64* %8, align 8
  %34 = load i64, i64* %8, align 8
  %35 = mul i64 %33, %34
  %36 = load i64, i64* %8, align 8
  %37 = mul i64 %35, %36
  %38 = load i64, i64* %9, align 8
  %39 = add i64 %38, %37
  store i64 %39, i64* %9, align 8
  %40 = load i64, i64* %9, align 8
  %41 = add i64 %40, 12
  store i64 %41, i64* %9, align 8
  %42 = load i64, i64* %7, align 8
  %43 = load i64, i64* %9, align 8
  %44 = icmp uge i64 %42, %43
  %45 = zext i1 %44 to i32
  store i32 %45, i32* %4, align 4
  br label %46

46:                                               ; preds = %21, %20, %12
  %47 = load i32, i32* %4, align 4
  ret i32 %47
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
